feat:added feature section and need to add some padding and background-color

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           discover interesting features from us.
         </p>
         <button
-          class="bg-primary text-white px-12 py-4 rounded-lg hover:bg-red-600 shadow-lg hover:shadow-xl transition duration-300 text-lg font-medium cursor-pointer"
+          class="bg-primary text-white px-20 py-4 rounded-lg hover:bg-red-600 shadow-lg hover:shadow-xl transition duration-300 text-lg font-medium cursor-pointer"
         >
           Get Start
         </button>
@@ -147,5 +147,46 @@
       </div>
     </section>
     <!-- Statistics section -->
+
+    <!-- Features section -->
+    <section class="section-container">
+      <div class="flex flex-col md:flex-row items-center">
+        <!-- Left content -->
+        <div class="md:w-1/2">
+          <img src="./src/images/features.png" alt="" />
+        </div>
+        <!-- Right contents -->
+        <div class="md:w-1/2 space-y-8">
+          <h2 class="text-heading-text text-4xl font-bold leading-tight">
+            We Provide Many <br />Features You Can Use
+          </h2>
+          <p class="text-primary-text leading-relaxed md:w-2/3">
+            You can explore the features that we provide with fun and have their
+            own functions each feature.
+          </p>
+          <!-- features list -->
+          <ul class="space-y-4">
+            <li class="flex items-center gap-3">
+              <div><img src="./src/images/green-tick.png" alt="icon" /></div>
+              <span>Powerfull online protection.</span>
+            </li>
+            <li class="flex items-center gap-3">
+              <div><img src="./src/images/green-tick.png" alt="icon" /></div>
+              <span>Internet without borders.</span>
+            </li>
+            <li class="flex items-center gap-3">
+              <div><img src="./src/images/green-tick.png" alt="icon" /></div>
+              <span>Supercharged VPN.</span>
+            </li>
+            <li class="flex items-center gap-3">
+              <div><img src="./src/images/green-tick.png" alt="icon" /></div>
+              <span>No specific time limits.</span>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <!-- Features section  -->
   </body>
 </html>
