feat:choose plan section

--- a/index.html
+++ b/index.html
@@ -188,5 +188,24 @@
     </section>
 
     <!-- Features section  -->
+
+    <!-- Choose your plan section -->
+    <section class="section-container">
+      <div class="">
+        <h3 class="font-bold text-4xl text-center text-primary-text">
+          Choose Your Plan
+        </h3>
+        <p class="text-center text-primary-text">
+          Let's choose the package that is best for you and explore it happily
+          and cheerfully.
+        </p>
+      </div>
+      <div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+    </section>
+    <!-- Choose your plan section -->
   </body>
 </html>
