--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css"
     />
-
     <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
     <title>Lasles VPN</title>
   </head>
@@ -398,8 +397,23 @@
         </p>
       </div>
       <!-- Slider main container -->
+      <div class="swiper testimonialSwiper">
+        <!-- Additional required wrapper -->
+        <div class="swiper-wrapper">
+          <!-- Slides -->
+        </div>
+        <!-- If we need pagination -->
+        <div class="swiper-pagination"></div>
+
+        <!-- If we need navigation buttons -->
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next"></div>
+
+      
+      </div>
       <!-- testmonial slide -->
     </section>
     <!-- Testmonial section -->
+    <script src="./src/js/app.js"></script>
   </body>
 </html>
